# msg

./: ARCHITECTURE.md  Cargo.toml  USER_GUIDE.md  syn_analysis.md
examples/: basic_usage.rs  chrono_test.rs  custom_formatters.rs  line_breaks.rs  message_concatenation.rs  proc_macro_test.rs  simple_test.rs  struct.rs  tables.rs  updated_macro_test.rs  working_example.rs
msg-macro/: Cargo.toml
msg-macro/src/: lib.rs
src/: ast.rs  conditional.rs  error.rs  formatter.rs  generator.rs  lib.rs  parser.rs  tests.rs  token.rs
tests/: phone_macro_test.rs
tg-message-macro/: Cargo.toml
tg-message-macro/src/: lib.rs
