[workspace]
members = [".", "msg-macro"]

[package]
categories = ["parser-implementations", "text-processing"]
description = "A Rust library for building and parsing Telegram messages with MarkdownV2 and HTML support"
edition = "2021"
keywords = ["telegram", "markdown", "parser", "generator", "bot"]
license = "MIT OR Apache-2.0"
name = "msg"
version = "0.1.0"

[dependencies]
chrono = "0.4"
lazy_static = "1.4"
regex = "1.10"
serde = {version = "1.0", features = ["derive"]}
msg-macro = {path = "./msg-macro"}
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
proptest = "1.4"

[features]
default = []
no_std = []
wasm = ["chrono/wasmbind"]
